<resources>

    <string name="app_name">Hexapod Tools</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Hexapod Tools</string>
    <string name="menu_connect">Connect</string>
    <string name="dialog_connect_connect">Connect</string>
    <string name="dialog_connect_title">Connect to Hexapod</string>
    <string name="dialog_connect_cancel">Cancel</string>
    <string name="dialog_connect_address_hint">Hexapod Address</string>
    <string name="progress_connect_title">Connecting to Hexapod</string>
    <string name="progress_connect_message">Please wait&#8230;</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="fragment_leg_leg1">Leg 1</string>
    <string name="fragment_leg_leg2">Leg 2</string>
    <string name="fragment_leg_leg3">Leg 3</string>
    <string name="fragment_leg_leg4">Leg 4</string>
    <string name="fragment_leg_leg5">Leg 5</string>
    <string name="fragment_leg_leg6">Leg 6</string>

</resources>